math-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-resolved.yaml
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: math
  name: math
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: math
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-resolved.yaml
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.network/polis-net: "true"
        io.kompose.service: math
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              value: postgres://postgres:oiPorg3Nrz0yqDLE@postgres:5432/polis-dev
            - name: WEBSERVER_PASS
              value: ws-pass
            - name: WEBSERVER_USERNAME
              value: ws-user
          image: docker.io/compdem/polis-math:prod
          name: polis-math
          resources: {}
      restartPolicy: Always
status: {}
