postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-resolved.yaml
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-resolved.yaml
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.network/polis-net: "true"
        io.kompose.service: postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: polis-dev
            - name: POSTGRES_PASSWORD
              value: oiPorg3Nrz0yqDLE
            - name: POSTGRES_USER
              value: postgres
          image: docker.io/compdem/polis-postgres:prod
          name: polis-postgres
          resources: {}
          volumeMounts:
            - mountPath: /backups
              name: backups
            - mountPath: /var/lib/postgresql/data
              name: postgres
      restartPolicy: Always
      volumes:
        - name: backups
          persistentVolumeClaim:
            claimName: backups
        - name: postgres
          persistentVolumeClaim:
            claimName: postgres
status: {}
